--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -3,6 +3,11 @@
   margin-right: 15px;
 }
 
+.slider-container {
+  margin: 0 auto;
+  width: 80%;
+}
+
 .slick-arrow {
   top: 50%;
   height: 26px;
