--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,4 +1,4 @@
-/* *{ border: 1px solid red; } */
+*{ border: 1px solid red; }
 
 html, body {
   height: 100%;
@@ -100,15 +100,11 @@ colors {
   height: 100vh;
 }
 
-.container {
-  height: 100vh;
-}
-
 .header-container {
     display: flex;
     align-items: center;
     justify-content: center;
- 
+    position: relative;
   }
   
 .header-container div {
@@ -119,12 +115,12 @@ colors {
 }
 
 .about-container {
-  display: flex;
+  /* display: flex; */
   /* align-items: center;
   justify-content: center; */
-  height: 100%;
+  /* height: 100%; */
   /* padding-top: 5%; */
-  
+  margin-top: 50px;
 }
 
 .about-container .row div{
@@ -135,9 +131,12 @@ colors {
   margin: 0;
 }
 
-.slider-container {
-  margin: 0 auto;
-  width: 80%;
+.project-container {
+  margin-top: 50px;
+}
+
+.experience-container {
+  margin-top: 50px;
 }
 
 .footer-container {
