--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -76,6 +76,7 @@
     right: 0;
     margin-right: 10px;
     margin-top: 10px;
+    z-index: 1;
   }
 
   nav {
@@ -84,15 +85,18 @@
   }
   nav ul {
     display: none;
-    background-color: #9F9F9F;
+    background-color: transparent;
+    list-style-type:none;
   }
   nav ul li {
     float: none;
-    background-color: #9F9F9F;
+    background-color:#232343;
+    color: aliceblue;
   }
   nav ul li a {
     padding: 15px;
     line-height: 20px;
+    color: aliceblue;
   }
   nav ul li ul li a {
     padding-left: 30px;
@@ -116,7 +120,7 @@
   border-radius: 1px;
   height: 5px;
   width: 35px;
-  background: #ffffff;
+  background:#FC6230;
   position: absolute;
   display: block;
   content: "";
