--- a/CSS/animations.css
+++ b/CSS/animations.css
@@ -26,4 +26,22 @@
         text-shadow: 0 0 50px #FC6230;
 }
 }
+
+.back2Top {
+        display: none; /* Hidden by default */
+        position: fixed; /* Fixed/sticky position */
+        bottom: 20px; /* Place the button at the bottom of the page */
+        right: 30px; /* Place the button 30px from the right */
+        z-index: 99; /* Make sure it does not overlap */
+        border: none; /* Remove borders */
+        outline: none; /* Remove outline */
+        background-color: #fc633098; /* Set a background color */
+        padding: 15px; /* Some padding */
+        border-radius: 10px; /* Rounded corners */
+      }
+      
+      .back2Top:hover {
+        transition: 0.3s;
+        background-color: #ff8138;
+      }
       
