--- a/CSS/index.css
+++ b/CSS/index.css
@@ -38,6 +38,11 @@ colors {
   color: #E7E7E7;
 }
 
+.card-heading {
+  font-size: 2.5vmax;
+  color: #E7E7E7;
+}
+
 .paragraphs {
   font-size: 1.5vmax;
   color: #E7E7E7;
@@ -53,8 +58,8 @@ colors {
 }
 
 .card-img-top {
-  width:600px;
-  height:250px;
+  width: 100%;
+  height: 100%;
 }
 
 .designed {
@@ -66,36 +71,32 @@ colors {
 .fa-4x {
   color: #FC6230;
 }
-
 .fa-2x {
+  color: #FC6230;
+}
+
+.nav-link {
   color:#FC6230;
 }
 
-.back2Top {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: #fc633098; /* Set a background color */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
+.nav-tabs > li > a{
+  border: medium none;
+}
+.nav-tabs > li > a:hover{
+  border: medium none;
+  /* border-radius: 0; */
+  color:#fff;
 }
 
-.back2Top:hover {
-  transition: 0.3s;
-  background-color: #ff8138;
+.flex-center > a > i {
+  
 }
-.designed {
-  position: relative;
-  margin-top: 4%;
-  font-size: 10px;
-  color: #9F9F9F;
-}
+
+
 
 /* Container styling */
+/*  */
+/*  */
 .container-fluid {
   height: 100vh;
 }
@@ -142,3 +143,4 @@ colors {
 .footer-container {
   background-color: #232343;
 }
+
