--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -81,10 +81,18 @@
   background-color: #964848;
 }
 
+.card-heading {
+  font-size: 20px;
+  color: #E7E7E7;
+}
 .card-font {
   font-size: 15px;
   color: #E7E7E7;
 }
 .card-color {
   background-color: #232343;
+}
+.card-img-top {
+  width: 100%;
+  height: 100%;
 }
