--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,4 +1,4 @@
-/* *{ border: 1px solid red; } */
+*{ border: 1px solid red; }
 
 html, body {
   height: 100%;
@@ -38,11 +38,6 @@ colors {
   color: #E7E7E7;
 }
 
-.card-heading {
-  font-size: 2.5vmax;
-  color: #E7E7E7;
-}
-
 .paragraphs {
   font-size: 1.5vmax;
   color: #E7E7E7;
@@ -55,11 +50,6 @@ colors {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-.card-img-top {
-  width: 100%;
-  height: 100%;
 }
 
 .designed {
@@ -88,9 +78,6 @@ colors {
   color:#fff;
 }
 
-.flex-center > a > i {
-  
-}
 
 
 
@@ -105,7 +92,8 @@ colors {
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
+
+    top: -50px;
   }
   
 .header-container div {
@@ -141,6 +129,7 @@ colors {
 }
 
 .footer-container {
+  margin-top: 25%;
   background-color: #232343;
 }
 
