--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,8 +1,7 @@
 @media only screen and (min-width: 1060px) {
   .nav-container {
-    position: relative;  
-    margin-right: 10%;
-    float: right;
+    position: absolute;  
+    right: 0%;
     margin: 0 auto;
   } 
 
@@ -69,7 +68,8 @@
     display: block;
   }
   .nav-container {
-    position: relative;  
+    position: absolute;  
+    right: 0%;
   }
   .nav-list {
     position: absolute;
